# HPC

./: .gitignore  HPCConcept.sln
HPCCImp/: CMakeLists.txt  frequency.c  frequency.h  main.c  planned_route.c  planned_route.h  stop_graph.c  stop_graph.h  ticket.c  ticket_processor.c  ticket_processor.h  utils.c  utils.h
HPCConcept/: .gitignore  CsvReader.cs  Program.cs
HPCConcept/Auxiliary/: PlannedRouteCsvLine.cs
HPCConcept/Helper/: DayTypeHelper.cs  TimeRangeHelper.cs
HPCConcept/Structures/: DayType.cs  Frequency.cs  StopGraph.cs  Ticket.cs  TimeRange.cs
HPC_C/: day_type.c  day_type.h  frequency.c  frequency.h  main.c  planned_route.c  planned_route.h  stop_graph.c  stop_graph.h  ticket.c  ticket.h  ticket_processor.c  ticket_processor.h  utils.c  utils.h
